--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -5,19 +5,20 @@
     <link rel="stylesheet" href="style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/basic.js"></script>
     <title></title>
   </head>
   <body ng-controller="mainController as ctrl">
     <nav>
-      <form ng-submit="ctrl.login(userPass)" class="form">
+      <form ng-submit="ctrl.login(userPass)" class="form-login">
         <div id="log">
           <input type="text" ng-model="userPass.username" placeholder="username"/>
           <input type="password" ng-model="userPass.password" placeholder="password"/>
           <button type="submit">submit</button>
         </div>
       </form>
-      <form ng-submit="ctrl.signup(userPass)" class="form">
+      <form ng-submit="ctrl.signup(userPass)" class="form-login">
         <div id="sin">
           <input type="text" ng-model="userPass.username" placeholder="username"/>
           <input type="password" ng-model="userPass.password" placeholder="password"/>
@@ -26,15 +27,17 @@
       </form>
       <button type="button" onclick="showSin('sin')">sign up</button>
       <button type="button" onclick="showLog('log')">log in</button>
-      <button ng-if="ctrl.user" ng-click="ctrl.logout()">log out</button>
+      <button id="logout-button" ng-if="ctrl.user" ng-click="ctrl.logout()">log out</button>
       <button type="button" onclick="show('new')">new game</button>
-      <button type="button" onclick="showEdit('edit')">edit game</button>
     </nav>
+    <header>
+      <img id="health-bar" src="http://orig05.deviantart.net/39d6/f/2014/186/b/9/sword_art_online_hp_bar_by_darkblackswords-d5nvlz9.png">
+    </header>
     <div class="container">
       <main>
         <div>
-          <button ng-click="ctrl.showGames(user.id)">My Games</button>
-          <div id="game-info" ng-repeat="game in ctrl.games">
+          <button ng-click="ctrl.showGames(user.id)">Display My Games</button>
+          <div id="game-info" ng-model="ctrl.showGames(user.id)" ng-repeat="game in ctrl.games" ng-if="ctrl.user">
             <div id="image">
               <img src= "{{ game.image }}"></img>
             </div>
@@ -68,9 +71,9 @@
           <p>Developers: {{ ctrl.game.developers }}</p>
           <p ng-if="ctrl.game">Publisher: {{ ctrl.game.publisher }}</p>
         </div>
-        <button type="button" onclick="show('new')">new game</button>
         <form ng-submit="ctrl.createGames()" class="form">
           <div id="new">
+            <h3>Add Game</h3>
             <input type="text" ng-model="ctrl.formdata.name" placeholder="name"/>
             <input type="text" ng-model="ctrl.formdata.platforms" placeholder="platforms"/>
             <input type="text" ng-model="ctrl.formdata.image" placeholder="image"/>
@@ -98,7 +101,11 @@
 
 
 <!-- -graveyard ---------------------------------------->
+<!-- ng-if="ctrl.Object.keys(user).length != 0"> -->
+ <!-- Object.keys(myObject).length
+ Object.keys(a).length; -->
 
+<!-- <button type="button" onclick="showEdit('edit')">edit game</button> -->
 <!-- <header> -->
   <!-- <form ng-submit="ctrl.signup(userPass)">
     <input type="text" ng-model="userPass.username" placeholder="username"/>
