--- a/video_game_reviews_app_frontend/public/index.html
+++ b/video_game_reviews_app_frontend/public/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/basic.js"></script>
     <title></title>
+    <link rel="shortcut icon" href="">
   </head>
   <body ng-controller="mainController as ctrl">
     <nav>
@@ -35,15 +36,15 @@
     </header>
     <div class="container">
       <main>
-        <div>
+        <div  id="index-games">
           <button ng-click="ctrl.showGames(user.id)">Display My Games</button>
-          <div id="game-info" ng-model="ctrl.showGames(user.id)" ng-repeat="game in ctrl.games" ng-if="ctrl.user">
+          <div id="game-info" ng-repeat="game in ctrl.games">
             <div id="image">
-              <img src= "{{ game.image }}"></img>
+              <img src= "{{ game.image }}">
             </div>
-            <button ng-click="ctrl.showGame(game.id)">Game Info</button>
-            <button ng-click="ctrl.deleteGamesFromDB(game.id)">Delete Game From Library</button>
-            <button type="button" onclick="showEdit('edit')" ng-if="ctrl.game">edit game</button>
+            <button class="index-buttons" ng-click="ctrl.showGame(game.id)">Game Info</button>
+            <button class="index-buttons" ng-click="ctrl.deleteGamesFromDB(game.id)">Delete Game</button>
+            <button class="index-buttons" type="button" onclick="showEdit('edit')" ng-if="ctrl.game">edit game</button>
                 <form ng-submit="ctrl.editGame(game.id)" class="form">
                 <div id="edit">
                   <input type="text" ng-model="ctrl.editformdata.name" placeholder="name"/>
@@ -69,7 +70,7 @@
           <p >Description: {{ ctrl.game.description }}</p>
           <p>Rating: {{ ctrl.game.rating }}</p>
           <p>Developers: {{ ctrl.game.developers }}</p>
-          <p ng-if="ctrl.game">Publisher: {{ ctrl.game.publisher }}</p>
+          <p>Publisher: {{ ctrl.game.publisher }}</p>
         </div>
         <form ng-submit="ctrl.createGames()" class="form">
           <div id="new">
