--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,11 @@
       </form>
         <button ng-click="ctrl.showSin()">sign up</button>
         <button ng-click="ctrl.showLog()">log in</button>
-        <button id="logout-button" ng-if="ctrl.user" ng-click="ctrl.logout()">log out</button>
+        <button id="out" ng-click="ctrl.logout()">log out</button>
         <!-- <button ng-click="ctrl.showNew()">new game</button> -->
     </nav>
     <header>
-      <img id="health-bar" src="http://orig05.deviantart.net/39d6/f/2014/186/b/9/sword_art_online_hp_bar_by_darkblackswords-d5nvlz9.png">
+      <!-- <img id="health-bar" src="http://orig05.deviantart.net/39d6/f/2014/186/b/9/sword_art_online_hp_bar_by_darkblackswords-d5nvlz9.png"> -->
     </header>
     <div class="container">
       <main>
