--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,11 @@
         <button ng-click="ctrl.showSin()">sign up</button>
         <button ng-click="ctrl.showLog()">log in</button>
         <button id="out" ng-click="ctrl.logout()">log out</button>
-        <!-- <button ng-click="ctrl.showNew()">new game</button> -->
     </nav>
     <header>
-      <!-- <img id="health-bar" src="http://orig05.deviantart.net/39d6/f/2014/186/b/9/sword_art_online_hp_bar_by_darkblackswords-d5nvlz9.png"> -->
+      <div id="title">
+        <h3>Game Journal</h3>
+      </div>
     </header>
     <div class="container">
       <main>
