--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     </nav>
     <header>
       <div id="title">
-        <h3>Game Journal</h3>
+        <!-- <h3>Game Journal</h3> -->
       </div>
     </header>
     <div class="container">
